cabal-version:      2.4
name:               x1
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Vincent Gschwend
maintainer:         12810603+neonima@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.17.2.0,
        MissingH ^>= 1.6.0.1,
        text-icu,
        text,
    hs-source-dirs:   src
    default-language: Haskell2010

executable x1
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        x1,
        MissingH ^>= 1.6.0.1,
        text-icu,
        text,

    hs-source-dirs:   app
    default-language: Haskell2010
